Creating the prompt and converting it into integer to add them in the console log

--- a/simple-calculator/index.html
+++ b/simple-calculator/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>simple calculator</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
+    <h1>
+        Simple calculator
+    </h1>
     <script>
+        let firstValue = parseInt(prompt("Veuillez entrer la valeur 1"));
+        let operator = prompt("Veuillez entrer l'operateur");
+        let secondValue = parseInt(prompt("Veuillez entrer la valeur 2"))
         
+        console.log(firstValue + secondValue);
+        
+
     </script>
 </body>
 </html>
