--- a/simple-calculator/index.html
+++ b/simple-calculator/index.html
@@ -15,8 +15,8 @@
         let name = prompt("What's your name")
         let random = Math.floor(Math.random()*100)+1;
         justePrix (name , random)
-        
-        function justePrix(name, random) {
+
+        function justePrix(name, vincentLagaffe) {
         let choix = 0
 
             while (choix != random) {
@@ -28,7 +28,7 @@
                 }
                 choix = +prompt("Veuillez entrer un nombre compris entre 1 et 100");
             }
-            console.log("Well done Wilders !!!")
+            console.log(`Well done ${name} !!!`)
         }
 
     </script>
